[package]
name = "project-golden-boy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
rapier2d = "0.11"
bevy_rapier2d = "0.11"

[profile.dev.package."*"]
# Optimize dependencies in dev so game engine / physics has good performance
opt-level = 3
